Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • gst-plugins-bad gst-plugins-bad
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 972
    • Issues 972
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 101
    • Merge requests 101
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar

Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.

  • GStreamerGStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #1276
Closed
Open
Issue created Apr 23, 2020 by Mathieu Duponchelle@meh🐸Maintainer

mpegtsmux: needs API in GstAggregator to push buffer lists

Regression from the port to aggregator, it assembles buffer lists to push out, or obtains them from GstAdapter directly, but as aggregator doesn't expose a finish_buffer_list API, it iterates the list and calls gst_aggregator_finish_buffer on each buffer.

Assignee
Assign to
Time tracking